--- a/app-client/src/app/order-history/order-history.component.html
+++ b/app-client/src/app/order-history/order-history.component.html
@@ -30,7 +30,7 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="totalPrice">
       <th mat-header-cell *matHeaderCellDef> Total Price. </th>
-      <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
+      <td mat-cell *matCellDef="let element"> {{ (element.totalPrice + element.shippingMoney) | currency: 'VND' }} </td>
     </ng-container>
   
     <!-- Symbol Column -->
@@ -48,7 +48,7 @@
         <!-- Symbol Column -->
     <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef> Date. </th>
-        <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.createdAt | date: 'medium'}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
