--- a/app-client/src/styles.scss
+++ b/app-client/src/styles.scss
@@ -420,6 +420,7 @@ li:active,
     align-items: center;
 }
 .mini-card {
+    max-width: 244px;
     margin-bottom: 30px;
     .item {
         font-size: 16px;
