--- a/app-client/src/app/home/home.component.scss
+++ b/app-client/src/app/home/home.component.scss
@@ -9,7 +9,35 @@
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
 }
-
+.card-container{
+    row-gap: 3em;
+    .card{
+        img{
+            width: 100%;
+        }
+    }
+    .mini-card-container{
+        
+        .text-name{
+            min-height: 40px;
+            span{
+                font-style: italic;
+                opacity: 80%;
+                font-size: 12px;
+            }
+        }
+        .mini-card{
+            img{
+                width: 100%;
+            }
+            .botom{
+                float: right;
+                padding: 0 10px 10px 0;
+                font-weight: 600;
+            }
+        }
+    }
+}
 .slider{
     position: relative;
     margin: 0 auto;
@@ -32,4 +60,9 @@
     margin-bottom: 10px;
     
     padding: 0 30px;
+}
+
+.mini-card{
+    width: 250px;
+    border: 1px gainsboro solid;
 }
