--- a/app-client/src/app/shared/header/cart-popover/cart-popover.component.scss
+++ b/app-client/src/app/shared/header/cart-popover/cart-popover.component.scss
@@ -27,6 +27,7 @@
               white-space: nowrap;
           }
           .address{
+              width: 150px;
               margin-top: -1px;
               font-size: 13px;
               color: #7e808c;
