--- a/app-client/src/app/single-restaurant/cart-details-for-rest/cart-details-for-rest.component.html
+++ b/app-client/src/app/single-restaurant/cart-details-for-rest/cart-details-for-rest.component.html
@@ -1,5 +1,7 @@
 <h1 style="margin:0">Cart</h1>
-<div>from <span style="font-weight: 600; color: #5d8ed5;">Name of restaurant</span></div>
+<div>
+    <!-- from  -->
+    <span style="font-weight: 600; color: #5d8ed5;"></span></div>
 <div class="total-items">{{ this.totalQuantity }} ITEMS</div>
 <ul class="items">
     <li class="list" *ngFor="let item of items">
