--- a/app-client/src/app/single-restaurant/single-restaurant.component.scss
+++ b/app-client/src/app/single-restaurant/single-restaurant.component.scss
@@ -32,6 +32,13 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        .box-name{
+            display: flex;
+            align-items: baseline;
+            .name{
+                margin-right: 30px;
+            }
+        }
         .total-items{
             font-weight: bold;
         }
