--- a/app-client/src/app/home/home.component.html
+++ b/app-client/src/app/home/home.component.html
@@ -58,11 +58,13 @@
             
                 </div>
             </div>
+        </div>
 
             <div class="title">
-                <h1>Dish With New Order</h1>
+                <h1 style="text-align: right;">Dish With New Order</h1>
             </div>
 
+        <div class="card-container">
             <div style="margin-top: 10px">
                 <div class="mini-card-container">
                     <div class="mini-card" *ngFor="let dishes of dishWithNewOrder" (click)="goToMyRestaurant(dishes)">
