--- a/app-client/src/app/home/home.component.scss
+++ b/app-client/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .home-container{
     margin-top: 80px;
     width: 100%;
+    margin-bottom: 50px;
 }
 .slider-background {
     background-color: #171a29;
