--- a/app-client/src/app/account/favourites/favourites.component.scss
+++ b/app-client/src/app/account/favourites/favourites.component.scss
@@ -1,7 +1,8 @@
 .card-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: end;
     flex-wrap: wrap;
+    gap: 20px;
     .card{
         img{
             width: 100%;
