--- a/app-client/src/app/account/addresses/addresses.component.html
+++ b/app-client/src/app/account/addresses/addresses.component.html
@@ -1,39 +1,25 @@
-<div>
-    <h1 style="font-weight: 500">Manage Addresses</h1>
-</div>
-<div class="address-box-container">
-    <div class="address-box-card">
-        <div class="address-box-header">
-            <mat-icon fontSet="material-icons-outlined">home</mat-icon>
-            <h3 style="font-weight: 500; margin-left: 10px">Home</h3>
-        </div>
-        <div class="address-box-footer">
-            <span> F 103, 64 Green Meadows, Marunji Rd, Marunji Village, Hinjawadi, Marunji, Maharashtra
-                411033, India</span>
-        </div>
-
-    </div>
-    <div class="address-box-card">
-        <div class="address-box-header">
-            <mat-icon fontSet="material-icons-outlined">work_outline</mat-icon>
-            <h3 style="font-weight: 500; margin-left: 10px">Work</h3>
-        </div>
-        <div class="address-box-footer">
-            <span> F 103, 64 Green Meadows, Marunji Rd, Marunji Village, Hinjawadi, Marunji, Maharashtra
-                411033, India</span>
-           
-        </div>
-
-    </div>
-    <div class="address-box-card">
-        <div class="address-box-header">
-            <mat-icon fontSet="material-icons-outlined">home</mat-icon>
-            <h3 style="font-weight: 500; margin-left: 10px">Home</h3>
-        </div>
-        <div class="address-box-footer">
-            <span> F 103, 64 Green Meadows, Marunji Rd, Marunji Village, Hinjawadi, Marunji, Maharashtra
-                411033, India</span>
-        </div>
-
-    </div>
-</div>
+<h1 class="ui header">
+    <i aria-hidden="true" class="drivers license outline icon"></i> My User Profile (ID Token Claims)
+  </h1>
+  <p>
+    Below is the information from your ID Token which was obtained during the
+    <a href="https://developer.okta.com/docs/guides/implement-auth-code-pkce">PKCE Flow</a>
+    and is now stored in local storage.
+  </p>
+  <p>
+    This route is protected with the <code>OktaAuthGuard</code> component, which will ensure that this page cannot be accessed until you have authenticated.
+  </p>
+  <table class="ui table">
+    <thead>
+      <tr>
+        <th>Claim</th>
+        <th>Value</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let claim of claims">
+        <td>{{claim.claim}}</td>
+        <td id="claim-{{claim.claim}}">{{claim.value}}</td>
+      </tr>
+    </tbody>
+  </table>
